--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,15 +1,12 @@
-image: node:20.17.0
-
 before_script:
-  - 'command -v ssh-agent >/dev/null || ( apt-get update -y && apt-get install openssh-client wget gnupg -y )'
-  - wget -qO- https://get.docker.com/gpg | apt-key add -
+  - apt-get update -qq
+  - apt-get install -qq git
+  # Setup SSH deploy keys
+  - "which ssh-agent || ( apt-get install -qq openssh-client )"
   - eval $(ssh-agent -s)
-  - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
+  - ssh-add <(echo "$SSH_PRIVATE_KEY")
   - mkdir -p ~/.ssh
-  - touch ~/.ssh/config
-  - touch ~/.ssh/known_hosts
-  - chmod -R 400 ~/.ssh
-  - '[[ -f /.dockerinit ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
+  - '[[ -f /.dockerenv ]] && echo -e "Host *\n\tStrictHostKeyChecking no\n\n" > ~/.ssh/config'
 
 deploy:
   stage: deploy
@@ -25,7 +22,7 @@ deploy_prod:
   stage: deploy
   environment:
     name: production
-    url: https://www.off-market.lu
+    url: https://off-market.lu
   script:
     - bash deploy_prod/deploy.sh
   only:
