--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test:playwright": "playwright test",
     "test:jest": "jest",
     "build": "next build",
-    "start": "next start"
+    "start": "next start -p 8989"
   },
   "dependencies": {
     "axios": "^1.9.0",
