--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.4",
     "next": "^15.3.0",
     "next-intl": "^4.0.0",
     "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "tailwindcss": "^3.4.4"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "@jest/globals": "^29.7.0",
     "@playwright/test": "^1.51.0",
     "@testing-library/react": "^16.2.0",
+    "@types/formidable": "^3.4.5",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.5",
     "@types/node": "^20.14.5",
