--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "lodash.isequal": "^4.5.0",
     "next": "^15.3.0",
     "next-intl": "^4.0.0",
     "nodemailer": "^6.10.1",
